--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="VIT event registration , here you can register for all types of events "
+      content="VIT event registration , here you can register for all VIT events"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/logo.png" type="image/logo.png " />
@@ -15,16 +15,22 @@
     <div class="body-div">
       <header class="head">
         <div>
-          <a href=""><img src="images/logo.png" alt="VITeve logo" /></a>
+          <a href="#home"
+            ><img
+              src="images/logo.png"
+              alt="VITeve logo"
+              width="140px"
+              height="50.46"
+          /></a>
           <h1><strong>VITeve - Vit event registration</strong></h1>
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="https://www.google.com/" target="_blank">Home</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Registration</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">FAQ</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#registration">Registration</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#faq">FAQ</a></li>
             <li>
               <input
                 type="search"
@@ -36,10 +42,98 @@
           </ul>
         </nav>
       </header>
-      <main>
-        <div class="spacer"></div>
-      </main>
-      <aside></aside>
+      <div class="outer-box">
+        <main class="home-box" id="home">
+          <div>vikesh kapoor</div>
+        </main>
+
+        <div class="event-box" id="events">
+          <aside>
+            <div>kapoor vikesh</div>
+          </aside>
+          <section>
+            <h2>Events</h2>
+            <details>
+              <summary>Gravitas</summary>
+              vikesh kapoor
+            </details>
+          </section>
+        </div>
+
+        <div class="registration-outer-box" id="registration">
+          <section class="registration-inner-box">
+            <div class="registration-top">
+              <img src="images/logo.png" alt="" />
+              <span>
+                <h2>Registration form</h2>
+                <span>Here you can register for all events</span>
+              </span>
+            </div>
+            <hr />
+            <div class="registration-main">
+              <form action="">
+                <div class="form-flex">
+                  <div class="form-flex">
+                    <span>
+                      <label for="name">Full name</label>
+                      <input type="text" name="" id="name" />
+                    </span>
+                    <span>
+                      <label for="regno">Register No</label>
+                      <input type="text" name="" id="regno" />
+                    </span>
+                  </div>
+                  <div class="form-flex">
+                    <span>
+                      <label for="email">Email id</label>
+                      <input type="email" name="" id="email" />
+                    </span>
+                    <span>
+                      <label for="gender">Gender</label>
+                      <select name="" id="Gender">
+                        <option value="">--Please select--</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                      </select>
+                    </span>
+                  </div>
+                  <div class="form-flex">
+                    <span>
+                      <label for="category">Category</label>
+                      <select name="" id="category">
+                        <option value="" selected>
+                          --Select event category--
+                        </option>
+                        <option value="gravitas">Gravitas</option>
+                        <option value="rivera">Rivera</option>
+                        <option value="general">General</option>
+                        <option value="tournament">tournament</option>
+                        <option value="supports">Supports</option>
+                        <option value="club event">Club event</option>
+                      </select>
+                    </span>
+                    <span>
+                      <label for="event">Event name</label>
+                      <select name="" id="event">
+                        <option value="" selected>--Select event--</option>
+                        <option value=""></option>
+                      </select>
+                    </span>
+                  </div>
+                </div>
+                <div class="button">
+                  <input type="submit" value="Submit" />
+                </div>
+              </form>
+            </div>
+          </section>
+        </div>
+
+        <footer class="footer-box" id="contact">
+          <div></div>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
