Home page complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </header>
       <div class="outer-box">
         <main class="home-box" id="home">
-          <div>vikesh kapoor</div>
+          <marquee direction="left"
+            >"Welcome to VIT Vellore Event Registration. Let the Fun
+            Begin!"</marquee>
         </main>
 
         <div class="event-box" id="events">
@@ -69,7 +71,6 @@
                 <span>Here you can register for all events</span>
               </span>
             </div>
-            <hr />
             <div class="registration-main">
               <form action="">
                 <div class="form-flex">
@@ -108,7 +109,7 @@
                         <option value="gravitas">Gravitas</option>
                         <option value="rivera">Rivera</option>
                         <option value="general">General</option>
-                        <option value="tournament">tournament</option>
+                        <option value="tournament">Tournament</option>
                         <option value="supports">Supports</option>
                         <option value="club event">Club event</option>
                       </select>
