--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/logo.png " />
     <title>VITeve</title>
   </head>
+
   <body>
     <div class="body-div">
       <header class="head">
@@ -30,7 +31,7 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#registration">Registration</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <li><a href="https://vit.ac.in/about-vit" target="_blank">About VIT</a></li>
             <li>
               <input
                 type="search"
@@ -42,99 +43,123 @@
           </ul>
         </nav>
       </header>
-      <div class="outer-box">
-        <main class="home-box" id="home">
-          <marquee direction="left"
-            >"Welcome to VIT Vellore Event Registration. Let the Fun
-            Begin!"</marquee>
-        </main>
 
-        <div class="event-box" id="events">
-          <aside>
-            <div>kapoor vikesh</div>
-          </aside>
-          <section>
-            <h2>Events</h2>
-            <details>
-              <summary>Gravitas</summary>
-              vikesh kapoor
-            </details>
-          </section>
-        </div>
+      <main class="home-box" id="home">
+        <marquee direction="left"
+          >"Welcome to VIT Vellore Event Registration. Let the Fun
+          Begin!"</marquee
+        >
+      </main>
 
-        <div class="registration-outer-box" id="registration">
-          <section class="registration-inner-box">
-            <div class="registration-top">
-              <img src="images/logo.png" alt="" />
-              <span>
-                <h2>Registration form</h2>
-                <span>Here you can register for all events</span>
-              </span>
-            </div>
-            <div class="registration-main">
-              <form action="">
-                <div class="form-flex">
-                  <div class="form-flex">
-                    <span>
-                      <label for="name">Full name</label>
-                      <input type="text" name="" id="name" />
-                    </span>
-                    <span>
-                      <label for="regno">Register No</label>
-                      <input type="text" name="" id="regno" />
-                    </span>
-                  </div>
-                  <div class="form-flex">
-                    <span>
-                      <label for="email">Email id</label>
-                      <input type="email" name="" id="email" />
-                    </span>
-                    <span>
-                      <label for="gender">Gender</label>
-                      <select name="" id="Gender">
-                        <option value="">--Please select--</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                        <option value="other">Other</option>
-                      </select>
-                    </span>
-                  </div>
-                  <div class="form-flex">
-                    <span>
-                      <label for="category">Category</label>
-                      <select name="" id="category">
-                        <option value="" selected>
-                          --Select event category--
-                        </option>
-                        <option value="gravitas">Gravitas</option>
-                        <option value="rivera">Rivera</option>
-                        <option value="general">General</option>
-                        <option value="tournament">Tournament</option>
-                        <option value="supports">Supports</option>
-                        <option value="club event">Club event</option>
-                      </select>
-                    </span>
-                    <span>
-                      <label for="event">Event name</label>
-                      <select name="" id="event">
-                        <option value="" selected>--Select event--</option>
-                        <option value=""></option>
-                      </select>
-                    </span>
-                  </div>
-                </div>
-                <div class="button">
-                  <input type="submit" value="Submit" />
-                </div>
-              </form>
-            </div>
-          </section>
-        </div>
-
-        <footer class="footer-box" id="contact">
-          <div></div>
-        </footer>
+      <div class="event-box" id="events">
+        <aside>
+          <div>kapoor vikesh</div>
+        </aside>
+        <section>
+          <h2>Events</h2>
+          <details>
+            <summary>Gravitas</summary>
+            vikesh kapoor
+          </details>
+        </section>
       </div>
+
+      <div class="registration-outer-box" id="registration">
+        <section class="registration-inner-box">
+          <div class="registration-top">
+            <img src="images/logo.png" alt="" />
+            <span>
+              <h2>Registration form</h2>
+              <span>Here you can register for all events</span>
+            </span>
+          </div>
+          <div class="registration-main">
+            <form action="">
+              <div class="form-flex">
+                <div class="form-flex">
+                  <span>
+                    <label for="name">Full name</label>
+                    <input type="text" name="" id="name" />
+                  </span>
+                  <span>
+                    <label for="regno">Register No</label>
+                    <input type="text" name="" id="regno" />
+                  </span>
+                </div>
+                <div class="form-flex">
+                  <span>
+                    <label for="email">Email id</label>
+                    <input type="email" name="" id="email" />
+                  </span>
+                  <span>
+                    <label for="gender">Gender</label>
+                    <select name="" id="Gender">
+                      <option value="">--Please select--</option>
+                      <option value="male">Male</option>
+                      <option value="female">Female</option>
+                      <option value="other">Other</option>
+                    </select>
+                  </span>
+                </div>
+                <div class="form-flex">
+                  <span>
+                    <label for="category">Category</label>
+                    <select name="" id="category">
+                      <option value="" selected>
+                        --Select event category--
+                      </option>
+                      <option value="gravitas">Gravitas</option>
+                      <option value="rivera">Rivera</option>
+                      <option value="general">General</option>
+                      <option value="tournament">Tournament</option>
+                      <option value="supports">Supports</option>
+                      <option value="club event">Club event</option>
+                    </select>
+                  </span>
+                  <span>
+                    <label for="event">Event name</label>
+                    <select name="" id="event">
+                      <option value="" selected>--Select event--</option>
+                      <option value=""></option>
+                    </select>
+                  </span>
+                </div>
+              </div>
+              <div class="button">
+                <input type="submit" value="Submit" />
+              </div>
+            </form>
+          </div>
+        </section>
+      </div>
+
+      <footer class="footer-box" id="contact">
+        <span class="footer-content">Contact Us</span>
+        <div class="footer-icon">
+          <a href="https://www.instagram.com/vikesh_kapoor_vk/" target="_blank"
+          ><img src="images/instagram.png" alt="instagram logo"
+          /></a>
+          <span>/</span>
+          <a href="https://www.linkedin.com/in/vikesh-kumar-vk" target="_blank"
+          ><img src="images/linkedin.png" alt="linkedin logo"
+          /></a>
+          <span>/</span>
+          <a href="mailto:vikeshkapoor100@gmail.com"
+            ><img src="images/social.png" alt="mail logo"
+          /></a>
+          <span>/</span>
+          <a href="https://twitter.com/Vikeshkapoorvk" target="_blank"
+            ><img src="images/twitter.png" alt="twitter logo"
+          /></a>
+          <span>/</span>
+          <a href="https://www.facebook.com/vikeshkapoorvk" target="_blank"
+            ><img src="images/facebook.png" alt="facebook logo"
+          /></a>
+        </div>
+        <div class="footer-logo">
+          <span>VITeve</span>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
