--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
               src="images/logo.png"
               alt="VITeve logo"
               width="140px"
-              height="50.46"
+              height="46.46px"
           /></a>
           <h1><strong>VITeve - Vit event registration</strong></h1>
         </div>
         <nav class="nav">
-          <ul>
+          <ul class="navigator">
             <li><a href="#home">Home</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#registration">Registration</a></li>
@@ -43,24 +43,43 @@
           </ul>
         </nav>
       </header>
-
       <main class="home-box" id="home">
         <marquee direction="left"
-          >"Welcome to VIT Vellore Event Registration. Let the Fun
+          >"Welcome to VIT Event Registration. Let the Fun
           Begin!"</marquee
         >
       </main>
 
       <div class="event-box" id="events">
         <aside>
-          <div>kapoor vikesh</div>
+          <div>
+            <ul class="navigator">
+              <li><a href="#">Gravitas</a></li>
+              <li><a href="#">Rivera</a></li>
+              <li><a href="#">General</a></li>
+              <li><a href="#">Tournament</a></li>
+              <li><a href="#">Supports</a></li>
+              <li><a href="#">Club event</a></li>
+            </ul>
+          </div>
         </aside>
-        <section>
+        <section class="event-section">
           <h2>Events</h2>
-          <details>
-            <summary>Gravitas</summary>
-            vikesh kapoor
-          </details>
+          <div class="card-box">
+            <h2>Gravitas</h2>
+            <div class="card">
+              <h1>Hexathon</h1>
+
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+          </div>
+          <div class="card-box"></div>
+          <div class="card-box"></div>
+          <div class="card-box"></div>
+          <div class="card-box"></div>
         </section>
       </div>
 
@@ -93,7 +112,7 @@
                   </span>
                   <span>
                     <label for="gender">Gender</label>
-                    <select name="" id="Gender">
+                    <select name="" id="gender">
                       <option value="">--Please select--</option>
                       <option value="male">Male</option>
                       <option value="female">Female</option>
