Added event section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#registration">Registration</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="https://vit.ac.in/about-vit" target="_blank">About VIT</a></li>
+            <li>
+              <a href="https://vit.ac.in/about-vit" target="_blank"
+                >About VIT</a
+              >
+            </li>
             <li>
               <input
                 type="search"
@@ -45,8 +49,7 @@
       </header>
       <main class="home-box" id="home">
         <marquee direction="left"
-          >"Welcome to VIT Event Registration. Let the Fun
-          Begin!"</marquee
+          >"Welcome to VIT Event Registration. Let the Fun Begin!"</marquee
         >
       </main>
 
@@ -54,32 +57,157 @@
         <aside>
           <div>
             <ul class="navigator">
-              <li><a href="#">Gravitas</a></li>
-              <li><a href="#">Rivera</a></li>
-              <li><a href="#">General</a></li>
-              <li><a href="#">Tournament</a></li>
-              <li><a href="#">Supports</a></li>
-              <li><a href="#">Club event</a></li>
+              <li><a href="#gravitas">Gravitas</a></li>
+              <li><a href="#rivera">Rivera</a></li>
+              <li><a href="#general">General</a></li>
+              <li><a href="#tournament">Tournament</a></li>
+              <li><a href="#sports">Sports</a></li>
+              <li><a href="#club_event">Club event</a></li>
             </ul>
           </div>
         </aside>
         <section class="event-section">
           <h2>Events</h2>
-          <div class="card-box">
+          <div class="event-container" id="gravitas">
             <h2>Gravitas</h2>
-            <div class="card">
-              <h1>Hexathon</h1>
-
+            <div class="card-box">
+              <div class="card">
+                <h3>Hexathon</h3>
+                <div>₹100</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Hack Battle</h3>
+                <div>₹100</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Pygame</h3>
+                <div>₹250</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>ForkThis</h3>
+                <div>₹200</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Robowars</h3>
+                <div>₹400</div>
+                <div>16th Sep</div>
+              </div>
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
           </div>
-          <div class="card-box"></div>
-          <div class="card-box"></div>
-          <div class="card-box"></div>
-          <div class="card-box"></div>
+          <div class="event-container" id="rivera">
+            <h2>Rivera</h2>
+            <div class="card-box">
+              <div class="card">
+                <h3>Rivera 1st day</h3>
+                <div>₹1000</div>
+                <div>10th Jan</div>
+              </div>
+              <div class="card">
+                <h3>Rivera 2nd day</h3>
+                <div>₹1000</div>
+                <div>11th Jan</div>
+              </div>
+              <div class="card">
+                <h3>Rivera 3rd day</h3>
+                <div>₹1500</div>
+                <div>12th Jan</div>
+              </div>
+              <div class="card">
+                <h3>Night party</h3>
+                <div>₹200</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Singing Show</h3>
+                <div>₹400</div>
+                <div>16th Sep</div>
+              </div>
+            </div>
+          </div>
+          <div class="event-container" id="general">
+            <h2>General</h2>
+            <div class="card-box">
+              <div class="card">
+                <h3>Diwali celebration</h3>
+                <div>Free</div>
+                <div>12th Nov</div>
+              </div>
+              <div class="card">
+                <h3>Holi celebration</h3>
+                <div>Free</div>
+                <div>25th Mar</div>
+              </div>
+              <div class="card">
+                <h3>Pongal celebration</h3>
+                <div>Free</div>
+                <div>12th Oct</div>
+              </div>
+              <div class="card">
+                <h3>Match screening</h3>
+                <div>Free</div>
+                <div>30th Nov</div>
+              </div>
+            </div>
+          </div>
+          <div class="event-container" id="tournament">
+            <h2>Tournament</h2>
+            <div class="card-box">
+              <div class="card">
+                <h3>Cricket</h3>
+                <div>₹100</div>
+                <div>19th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Football</h3>
+                <div>₹100</div>
+                <div>24th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Volleyball</h3>
+                <div>₹250</div>
+                <div>28th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Kabaddi</h3>
+                <div>₹200</div>
+                <div>30th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Chess</h3>
+                <div>₹400</div>
+                <div>6th Oct</div>
+              </div>
+            </div>
+          </div>
+          <div class="event-container" id="sports">
+            <h2>Sports</h2>
+            <div class="card-box">
+              <div class="card">
+                <h3>Cricket match</h3>
+                <div>₹50</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Football match</h3>
+                <div>₹50</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Volleyball match</h3>
+                <div>₹50</div>
+                <div>16th Sep</div>
+              </div>
+              <div class="card">
+                <h3>Kabaddi match</h3>
+                <div>₹50</div>
+                <div>16th Sep</div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
 
@@ -156,11 +284,11 @@
         <span class="footer-content">Contact Us</span>
         <div class="footer-icon">
           <a href="https://www.instagram.com/vikesh_kapoor_vk/" target="_blank"
-          ><img src="images/instagram.png" alt="instagram logo"
+            ><img src="images/instagram.png" alt="instagram logo"
           /></a>
           <span>/</span>
           <a href="https://www.linkedin.com/in/vikesh-kumar-vk" target="_blank"
-          ><img src="images/linkedin.png" alt="linkedin logo"
+            ><img src="images/linkedin.png" alt="linkedin logo"
           /></a>
           <span>/</span>
           <a href="mailto:vikeshkapoor100@gmail.com"
