add- responsive design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           </ul>
         </nav>
       </header>
-      <main class="home-box" id="home">
+      <main class="home-box" >
+        <div id="home"></div>
         <marquee direction="left"
           >"Welcome to VIT Event Registration. Let the Fun Begin!"</marquee
         >
@@ -67,7 +68,9 @@
           </div>
         </aside>
         <section class="event-section">
-          <h2>Events</h2>
+          <div class="event-head">
+            <h2>Events</h2>
+          </div>
           <div class="event-container" id="gravitas">
             <h2>Gravitas</h2>
             <div class="card-box">
