--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               height="46.46px"
           /></a>
           <h1><strong>VITeve - Vit event registration</strong></h1>
+          <h2>VITeve</h2>
         </div>
         <nav class="nav">
           <ul class="navigator">
@@ -307,9 +308,10 @@
           /></a>
         </div>
         <div class="footer-logo">
-          <span>VITeve</span>
+          <span><a href="#home">VITeve</a></span>
         </div>
       </footer>
+      <script src="script.js"></script>
     </div>
   </body>
 </html>
