--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               src="images/logo.png"
               alt="VITeve logo"
               width="140px"
-              height="46.46px"
+              height="46.46px" title="Click to refresh"
           /></a>
           <h1><strong>VITeve - Vit event registration</strong></h1>
           <h2>VITeve</h2>
